--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/estil.css">
-    <title>Hello World</title>
+    <title>Hola món!</title>
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>Hola món!</h1>
 </body>
 
 </html>
